# gpgpu

./: .gitignore  CMakeLists.txt  README.md  TODO
include/: cpu_lbp.hh  gpu_lbp.hh  lbp.hh  nearest_neighbour.hh  pipeline.hh  render.hh  serialize.hh  train_kmeans.hh  utils.hh  utils_gpu.cuh
src/: benchmark.cc  cpu_lbp.cc  gpu_lbp.cu  gpu_lbp_opti.cu  lbp.cc  main.cc  nearest_neighbour.cc  pipeline.cc  render.cc  render_gpu.cu  render_gpu.hh  serialize.cc  train.cc  train_kmeans.cc  utils.cc  utils_gpu.cu
